--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"autoprefixer": "^10.4.20",
 		"esbuild-plugin-postcss2": "^0.1.2",
 		"esbuild-postcss": "^0.0.4",
+		"lucide-react": "^0.469.0",
 		"moment": "^2.30.1",
 		"postcss": "^8.4.49",
 		"react": "^19.0.0",
